stimmabgabevermerke code replace by wahldaten